update the draft

--- a/sections/data.tex
+++ b/sections/data.tex
@@ -41,7 +41,7 @@ We use photometric LRGs selected from the DESI Imaging Surveys Data Release 9 \c
 
 Fig. \ref{fig:ng} (top) shows observed density field of DR9 LRGs in deg$^{-2}$ before accounting for any potential systematic effects. There are some disconnected islands, hereafter referred to as \textit{spurious islands}, in the DECaLS North region at Declination below $-11$, which are removed from the sample to minimize potential calibration issues. Additionally, parts of the DECaLS South with Declination below $-30$ are cut from the sample, since similar calibration issues might tamper with our analysis. We present  how these data cuts influence our $\fnl$ constraints in Section \ref{sec:results}. Fig. \ref{fig:ng} (bottom) illustrates the redshift distribution of our sample which is inferred from the DESI Survey Validation data \mr{(Dawson et al 2022)}, and the evolution of  galaxy bias for our LRG sample adapted from \cite{zhou2021clustering}, consistent with the assumption of a constant clustering amplitude.
 
-We study the correlation between the LRG density map and potential sources of systematic error, mapped into \textsc{healpix} at the same \textsc{nside}. Similar to \cite{zhou2022target}, the properties studied in this work are local stellar density constructed from point-like sources with a g-band magnitude in the range $12 \leq g < 17$ from Gaia Data Release 2 \citep[see,][]{gaiadr2, myers2022};  Galactic extinction E[B-V] from \cite{schlegel1998maps}; and other imaging properties include survey depth (galaxy depth in the g, r, z bands and PSF depth in W1) and seeing in the g, r, z bands. These maps are produced by making the histograms of randoms (painted with imaging properties) in \textsc{HEALPix} and averaging over randoms in each pixel. Fig. \ref{fig:pcc} shows the Spearman correlation between galaxy density and imaging properties.
+We study the impact of potential sources of systematic error, mapped into \textsc{healpix} at the same \textsc{nside}. Similar to \cite{zhou2022target}, the properties studied in this work are local stellar density constructed from point-like sources with a g-band magnitude in the range $12 \leq g < 17$ from Gaia Data Release 2 \citep[see,][]{gaiadr2, myers2022};  Galactic extinction E[B-V] from \cite{schlegel1998maps}; and other imaging properties include survey depth (galaxy depth in the g, r, and z bands and PSF depth in W1) and seeing in the g, r, and z bands. These maps are produced by making the histograms of randoms (painted with imaging properties) in \textsc{HEALPix} and averaging over randoms in each pixel. Fig. \ref{fig:pcc} shows the Pearson correlation between galaxy density and imaging properties in the top panel and the correlation among imaging properties themselves in the bottom panel. There is strong correlation between galaxy density and depth maps and then the second important property seems to be Galactic foregrounds. There is a little correlation between galaxy density and the W1 depth and psfsize properties. We find that there is a large correlation among the imaging properties themselves, especially the r-band and g-band properties are more correlated with each other than with the z-band. We derive a set of weights to account for spurious fluctuations by regressing out galaxy counts against a set of imaging maps. We consider both linear and nonlinear models. Parameters of the models are fit by optimizing the negative Poisson log likelihood, $= \lambda - y \log(\lambda)$, where $\rho$ is the galaxy density and $\lambda$ is the model defined as $\lambda = \log (1+e^{f(u)})$ where u is either a linear function or a nonlinear function of imaging maps. For the linear model, we perform a Monte Carlo Markov Chain (MCMC) using the \textsc{emcee} package \mr{CITE} and for the nonlinear model we use the implementation from \mr{Rezaie et al (2021)}. The nonlinear model is a neural network model with three hidden layers and 20 rectifier units on each layer. Rectifier is defined as  $ \max(0, u)$, and introduces the nonlinearity in the neural network. For the nonlinear approach we use $60\%$ for training, $20\%$ for validation, and $20\%$ for testing. By changing the permutation of training-testing splits, we test the nonlinear model on entire data. The training is performed using \textsc{Adam} optimize, which is a variant of gradient descent, and the learning rate is tuned on a validation set to dynamically varying between $0.001$ and $0.1$, to enable learning robust against local minima.
 
 \begin{figure}
     \centering
